# seashail

./: .gitignore  .oxlintrc.json  Cargo.toml  README.md  README.zh-CN.md  SECURITY.md  clippy.toml  dist-workspace.toml  package.json  pyproject.toml  seashail.rb  tsconfig.base.json  turbo.json
.github/workflows/: npm-publish.yml  pypi-publish.yml  release.yml  sign-release.yml
apps/docs/: .env.example  next.config.ts  package.json  source.config.ts  tsconfig.json
apps/docs/content/docs/: glossary.mdx  glossary.zh.mdx  index.mdx  index.zh.mdx  meta.json  meta.zh.json
apps/docs/content/docs/getting-started/: configuration.mdx  configuration.zh.mdx  install.mdx  install.zh.mdx  meta.json  meta.zh.json  quickstart.mdx  quickstart.zh.mdx
apps/docs/content/docs/guides/: adding-a-language.mdx  adding-a-language.zh.mdx  bridging.mdx  bridging.zh.mdx  chains-and-funding.mdx  chains-and-funding.zh.mdx  defi.mdx  defi.zh.mdx  meta.json  meta.zh.json  network-mode.mdx  network-mode.zh.mdx  nfts.mdx  nfts.zh.mdx  perps.mdx  perps.zh.mdx  policy-and-approvals.mdx  policy-and-approvals.zh.mdx  predictions.mdx  predictions.zh.mdx  pumpfun.mdx  pumpfun.zh.mdx  scam-blocklist.mdx  scam-blocklist.zh.mdx  security-model.mdx  security-model.zh.mdx  sending.mdx  sending.zh.mdx  swapping.mdx  swapping.zh.mdx  wallets.mdx  wallets.zh.mdx
apps/docs/content/docs/reference/: architecture.mdx  architecture.zh.mdx  capabilities.mdx  capabilities.zh.mdx  chains.mdx  chains.zh.mdx  cli.mdx  cli.zh.mdx  index.mdx  index.zh.mdx  mcp-tools.mdx  mcp-tools.zh.mdx  meta.json  meta.zh.json  tools-lending.mdx  tools-lending.zh.mdx  tools-liquidity.mdx  tools-liquidity.zh.mdx  tools-network.mdx  tools-network.zh.mdx  tools-nfts.mdx  tools-nfts.zh.mdx  tools-perps.mdx  tools-perps.zh.mdx  tools-policy.mdx  tools-policy.zh.mdx  tools-predictions.mdx  tools-predictions.zh.mdx  tools-pumpfun.mdx  tools-pumpfun.zh.mdx  tools-read.mdx  tools-read.zh.mdx  tools-staking.mdx  tools-staking.zh.mdx  tools-wallets.mdx  tools-wallets.zh.mdx  tools-write.mdx  tools-write.zh.mdx  verification.mdx  verification.zh.mdx
apps/docs/content/docs/strategies/: compare-perps.mdx  compare-perps.zh.mdx  compare-swaps.mdx  compare-swaps.zh.mdx  compare-wallets.mdx  compare-wallets.zh.mdx  dca.mdx  dca.zh.mdx  index.mdx  index.zh.mdx  meta.json  meta.zh.json  multi-chain-management.mdx  multi-chain-management.zh.mdx  new-wallet-setup.mdx  new-wallet-setup.zh.mdx  portfolio-rebalancing.mdx  portfolio-rebalancing.zh.mdx  risk-monitoring.mdx  risk-monitoring.zh.mdx  what-can-i-ask.mdx  what-can-i-ask.zh.mdx  yield-farming.mdx  yield-farming.zh.mdx
apps/docs/content/docs/troubleshooting/: index.mdx  index.zh.mdx  meta.json  meta.zh.json
apps/docs/content/glossary/: zh-CN.json
apps/docs/public/: tools.json
apps/docs/scripts/: postbuild-i18n.sh
apps/docs/src/: env.ts  mdx-components.tsx
apps/docs/src/app/: global.css  layout.tsx  sitemap.ts
apps/docs/src/app/(home)/: layout.tsx  page.tsx
apps/docs/src/app/[lang]/: layout.tsx  locale-cookie.tsx
apps/docs/src/app/[lang]/(home)/: layout.tsx  (+1 more)
apps/docs/src/app/docs/: layout.tsx
apps/docs/src/app/llms-full.txt/: route.ts
apps/docs/src/app/llms.txt/: route.ts
apps/docs/src/components/: search-dialog.tsx
apps/docs/src/lib/: constants.ts  i18n.ts  layout.shared.tsx  search.ts  source.ts
apps/landing/: .env.example  next.config.ts  package.json  tsconfig.json
apps/landing/public/: install  install.ps1
apps/landing/src/: env.ts
apps/landing/src/app/: global.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
apps/landing/src/app/[lang]/: layout.tsx  page.tsx
apps/landing/src/components/landing/: site-agent-compat.tsx  site-architecture.tsx  site-cta.tsx  site-hero.tsx  site-open-source.tsx  site-problem.tsx  site-security.tsx  site-solution.tsx  site-trading-surface.tsx
apps/landing/src/content/: copy.ts  copy.zh.ts
apps/landing/src/i18n/: config.ts  get-dictionary.ts
apps/landing/src/lib/: constants.ts
apps/landing/src/styles/: global.css
crates/seashail/: Cargo.toml  package.json
crates/seashail/.github/: dependabot.yml
crates/seashail/.github/workflows/: ci.yml  npm-publish.yml  pypi-publish.yml  release.yml  sign-release.yml
crates/seashail/src/: agent.rs  amount.rs  audit.rs  blocklist.rs  cli_output.rs  config.rs  db.rs  doctor.rs  errors.rs  financial_math.rs  fsutil.rs  main.rs  marketplace_adapter.rs  ofac.rs  openclaw.rs  paths.rs  policy.rs  policy_engine.rs  price.rs  retry.rs  store.rs  upgrade.rs  wallet.rs
crates/seashail/src/chains/: bitcoin.rs  evm.rs  mod.rs  solana.rs
crates/seashail/src/keystore/: crypto.rs  mod.rs  shamir.rs
crates/seashail/src/perps/: hyperliquid.rs  jupiter_perps.rs  mod.rs
crates/seashail/src/rpc/: mcp_server.rs  mod.rs  proxy.rs  server.rs
crates/seashail/src/rpc/mcp_server/: elicitation.rs  jsonrpc.rs  state.rs  transport.rs
crates/seashail/src/rpc/mcp_server/tools/: helpers.rs  key_loading.rs  mod.rs  network.rs  perps.rs  policy.rs  policy_confirm.rs  schema.rs  value_helpers.rs
crates/seashail/src/rpc/mcp_server/tools/nft/: common.rs  inventory.rs  mod.rs  trade.rs  transfer.rs
crates/seashail/src/rpc/mcp_server/tools/read/: balance.rs  bridge_status.rs  defi_yield_pools.rs  estimate_gas.rs  inspect_token.rs  lending_positions.rs  mod.rs  portfolio.rs  portfolio_analytics.rs  prediction_markets.rs  prediction_positions.rs  pumpfun.rs  token_price.rs  tx_history.rs
crates/seashail/src/rpc/mcp_server/tools/wallets/: active.rs  add_account.rs  create_wallet.rs  create_wallet_pool.rs  deposit_info.rs  import_wallet.rs  info.rs  list.rs  mod.rs  shares.rs
crates/seashail/src/rpc/mcp_server/tools/write/: aave.rs  common.rs  compound.rs  defi_tx_envelope.rs  fund_wallets.rs  kamino.rs  marginfi.rs  mod.rs  polymarket.rs  pumpfun.rs  request_airdrop.rs  send_transaction.rs  staking.rs  swap_tokens.rs  transfer_between_wallets.rs  wormhole.rs  wormhole_solana.rs
crates/seashail/tests/: doctor.rs
python/: README.md  pyproject.toml
python/src/seashail_mcp/: cli.py
scripts/: check-zh-copy.mjs
(+35 files in other folders)
