[workspace]
resolver = "2"
members = ["crates/seashail"]

[workspace.package]
edition = "2021"
license = "Apache-2.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# ── Workspace-wide lint policy (strictest practical settings) ──────────
#
# Groups use priority = -1 so individual lint overrides (priority 0) take
# effect on top of them.  Restriction lints are cherry-picked because the
# full group contains contradictory lints.

[workspace.lints.rust]
unsafe_code = "deny"
# missing_docs = "warn"       # enable once doc coverage improves

[workspace.lints.clippy]
# ── Lint groups ───────────────────────────────────────────────────────
all             = { level = "deny", priority = -1 }
pedantic        = { level = "deny", priority = -1 }
nursery         = { level = "warn", priority = -1 }
cargo           = { level = "warn", priority = -1 }

# ── Restriction lints (security-critical cherry-picks) ────────────────
unwrap_used                   = "deny"
get_unwrap                    = "deny"
panic                         = "deny"
todo                          = "deny"
unimplemented                 = "deny"
unreachable                   = "deny"
dbg_macro                     = "deny"
exit                          = "deny"
map_err_ignore                = "deny"
mem_forget                    = "deny"
verbose_file_reads            = "deny"
expect_used                   = "warn"
print_stdout                  = "warn"
print_stderr                  = "warn"
str_to_string                 = "warn"
clone_on_ref_ptr              = "warn"
default_numeric_fallback      = "warn"
float_arithmetic              = "warn"
indexing_slicing               = "warn"
lossy_float_literal           = "warn"
multiple_inherent_impl        = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_name_method              = "warn"
shadow_unrelated              = "warn"
string_add                    = "warn"
string_slice                  = "warn"
try_err                       = "warn"
unnecessary_self_imports      = "warn"
unneeded_field_pattern        = "warn"
unseparated_literal_suffix    = "warn"
wildcard_enum_match_arm       = "warn"
missing_assert_message        = "warn"
undocumented_unsafe_blocks    = "deny"
empty_structs_with_brackets   = "warn"
format_push_string            = "warn"
if_then_some_else_none        = "warn"
mixed_read_write_in_expression = "warn"
mutex_atomic                  = "warn"
rc_buffer                     = "warn"
rc_mutex                      = "deny"
redundant_type_annotations    = "warn"
# tests_outside_test_module — disabled: fires on integration tests in tests/
fn_to_numeric_cast_any        = "deny"
as_underscore                 = "deny"
deref_by_slicing              = "warn"
empty_drop                    = "warn"
error_impl_error              = "deny"
infinite_loop                 = "deny"
large_include_file            = "warn"
let_underscore_must_use       = "warn"
let_underscore_untyped        = "warn"
map_with_unused_argument_over_ranges = "warn"
missing_asserts_for_indexing  = "warn"
needless_raw_strings          = "warn"
pub_without_shorthand         = "warn"
renamed_function_params       = "warn"
string_lit_chars_any          = "warn"
unused_trait_names            = "warn"
allow_attributes              = "warn"

# ── Pedantic / nursery allows (too noisy or inapplicable) ─────────────
module_name_repetitions       = "allow"
must_use_candidate            = "allow"
missing_errors_doc            = "allow"
missing_panics_doc            = "allow"
option_if_let_else            = "allow"   # often less readable
