[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seashail-mcp"
version = "0.1.0"
description = "Run the Seashail MCP server in one line via uvx."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Seashail" }]
keywords = ["crypto", "trading", "wallet", "mcp"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
]

[project.scripts]
seashail-mcp = "seashail_mcp.cli:main"

[project.urls]
Homepage = "https://github.com/seashail/seashail"
Repository = "https://github.com/seashail/seashail"
